# task_manager

./: .gitignore  Cargo.toml  Dioxus.toml  package.json  tailwind.css
assets/: tailwind.css
assets/styling/: main.css
src/: main.rs  task_manager.rs
src/components/: mod.rs  task_manager.rs  task_manager_provider.rs
src/components/filter/: button.rs  input.rs  mod.rs
src/components/tasks/: mod.rs  task_card.rs  task_column.rs
src/models/: mod.rs  task.rs  task_groups.json  task_groups.rs
src/models/task/: data.rs  mod.rs  priority.rs
src/models/task_group/: context.rs  data.rs  mod.rs  state.rs  task_groups.json
src/utils/: mod.rs
